Fixed display issue on safari

--- a/doc/themes/tensorly/static/base.css
+++ b/doc/themes/tensorly/static/base.css
@@ -361,7 +361,7 @@ div.sphx-glr-download a span:last-child {
     padding: 0 0;
     margin: 0 0;
     background-color: #232B2D;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
 }
 .stick {
